--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ main {
 }
 
 #playarea {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 6 1 35%;
@@ -78,6 +79,21 @@ main {
 
 }
 
+#cover-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--maincolor);
+}
+
+#cover-page h3 {
+  font-size: 3rem;
+}
+
+
 #scoreboard {
   flex: 2 1 15%;
 }
@@ -90,9 +106,15 @@ main {
   text-align: left;
 }
 
+.right-answer {
+  background-color: green;
+  color: inherit;
+}
 
-
-
+.wrong-answer {
+  background-color: red;
+  color: inherit;
+}
 
 
 
