--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   padding: 0;
   margin: 0;
 }
@@ -11,13 +11,14 @@
   --buttoncolor: #5f634fff;
   --rightcolor: #2f4b26ff;
   --wrongcolor: rgb(75, 28, 28);
+  --backcolor: white;
 }
 
 body {
   font-size: 16px;
   color: black;
   text-align: center;
-  background-color: var(--maincolor);
+  background-color: var(--backcolor);
 }
 
 header {
@@ -37,6 +38,15 @@ main {
   justify-content: space-evenly;
   flex-direction: row;
   padding: 25px;
+}
+
+.card {
+  margin-left: 1%;
+  margin-right: 1%;
+  background-color: var(--maincolor);
+  border-radius: 2%;
+  border: 2px solid black;
+  box-shadow: 5px 5px 10px var(--shadowcolor);
 }
 
 #sidebar {
@@ -83,16 +93,25 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: var(--maincolor);
+  left: 0;
+  border: none;
+  box-shadow: none;
+  margin: 0;
 }
 
 #cover-page h3 {
   font-size: 3rem;
 }
 
+#cover-page ul {
+  font-size: 1rem;
+  margin: 1%;
+}
 
 #scoreboard {
   flex: 2 1 15%;
